# open_spiel

./: .gitignore  BUGS.md  LONG_NARDE_IMPLEMENTATION.md  Makefile  TODO.md  build_long_narde.sh  check_debug_symbols.sh  rebuild_with_shared_libs.sh  test_fix.cc  test_long_narde.cc
.cursor/rules/: coding-principals.mdc  knowledge-graph.mdc  long-narde-backgammon.mdc  specia-instructions.mdc  think.mdc
open_spiel/: CMakeLists.txt
open_spiel/examples/: CMakeLists.txt
open_spiel/games/: CMakeLists.txt
open_spiel/games/long_narde/: CMakeLists.txt  bearing_off_test.cc  long_narde.cc  long_narde.h  long_narde_api.cc  long_narde_encoding.cc  long_narde_game.cc  long_narde_legal_actions.cc  long_narde_moves.cc  long_narde_state.cc  long_narde_test.cc  long_narde_test_actions.cc  long_narde_test_basic.cc  long_narde_test_bridges.cc  long_narde_test_common.h  long_narde_test_endgame.cc  long_narde_test_legacy.cc  long_narde_test_main.cc  long_narde_test_movement.cc  long_narde_utils.cc  long_narde_validation.cc  random_sim_test.cc
